# multipage-streamlit

./: README.md  pyproject.toml  requirements.txt
letty/: __init__.py  main.py
letty/pages/: project 1.py
