[project]
name = "letty"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.8.3",
    "streamlit>=1.32.1",
    "boto3>=1.34.61",
    "scikit-learn>=1.4.1.post1",
    "plotly>=5.20.0",
    "pip>=24.0",
    "ipykernel>=6.29.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "letty:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/letty"]
